--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -11,7 +11,7 @@ Metody Optymalizacji w Zarządzaniu
 \newpage
 \tableofcontents
 \section{Przydział miejsc w parlamencie}
-\subsection{Tu kilka stron o początkowych tematach}
+\subsection{Tu kilka stron o początkowych tematach Jefferson i inni}
 
 \newpage
 \subsection{Tijdeman}
