--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -83,7 +83,7 @@ U=m(\sqrt[m]{2}-1)
 \item jedno zadanie kończy się dokładnie w żadanym terminie zakończenia $\left \lceil \frac{n}{2} \right \rceil$ zadań kończy się przed lub w żądanym terminie zakończenia
 \item problem restryktywny może przecinać zadanie
 \end{itemize}
-
+\subsubsection{Algorytm dla problemu nierestryktywnego}
 Algorym Kaneta
 \begin{enumerate}
 \item E=$\phi$, T=$\phi$
@@ -99,7 +99,9 @@ END
 END
 S=(E,T) (konkatenacja)
 \end{enumerate}
-
+\subsubsection{Algorytm dla problemu restryktywnego}
+\subsubsection{Przykład dla problemu nierestryktywnego}
+\subsubsection{Przykład dla problemu restryktywnego}
 \subsection{WSAD weighted sum of absolute deviations}
 \subsubsection{Sformułowanie problemu}
 \begin{itemize}
