--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -231,6 +231,35 @@ U=m(\sqrt[m]{2}-1)
 \end{itemize}
 \subsubsection{Przykład statyczny}
 \subsubsection{Przykład dynamiczny}
+\subsubsection{Transformacja do problemu przydziału miejsc w parlamencie}
+\begin{itemize}
+\item NWW(T1,...,Tn), możemy powtarzać dowolną ilość razy
+\item $\frac{C_{i}}{T}$ jest współczynnikiem częstotliwości pojawiania się zadania w uszeregowaniu o dowolnej długości
+\item Jeśli przyjmiemy, że aktualna długość szeregowania jest rozmiarem parlamentu h, to $\frac{C_{i}}{T_{i}}$ odpowiada $\frac{p_{i}}{P}$ zadania i
+\item Suma czasów zadania i wymagana w uszeregowaniu o długości h (zależy od liczby żądań) odpowiada rozmiarowi populacji $p_{i}$
+\end{itemize}
+Sformułowanie problemu(?)
+\begin{itemize}
+\item d żądany termin zakończenia
+\item C rzeczywisty termin zakończenia
+\item wyprzedzenie e=d-C
+\item Koszt wyprzedzenia: f(e)
+\item spóźnienie t=C-d
+\item Koszt spóźnienia g(t)
+\item $e_{i}=\left\{\begin{matrix}
+d_{i}-C_{i}$ gdy $C_{i}<d_{i}\\ 
+0$ gdy $C_{i}\geq d_{i}
+\end{matrix}\right.$
+\item $t_{i}=\left\{\begin{matrix}
+C_{i}-d_{i}$ gdy $C_{i}\geq d_{i}\\ 
+0$ gdy $C_{i}< d_{i}
+\end{matrix}\right.$
+\item Całkowity koszt uszeregowania
+
+$K=\sum\limits_{i=1}^{n}[f_{i}(e_{i})+g_{i}(t_{i})]$
+
+\item dla $d_{i}=d$ wszystkie zadania mają ten sam żądany termin zakończenia, wzory tak jak wyżej, $d_{i}$ zamienione na d.
+\end{itemize}
 \subsection{MAD - Mean Absolute Deviation}
 \subsubsection{Sformułowanie problemu}
 \begin{itemize}
