--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -168,7 +168,21 @@ Wniosek
     \end{tabular}
 \end{center}
 
-
+\subsection{Jefferson}
+\subsubsection{Algorytm}
+\subsubsection{Przykład}
+\subsection{Adamsa}
+\subsubsection{Algorytm}
+\subsubsection{Przykład}
+\subsection{Webstera}
+\subsubsection{Algorytm}
+\subsubsection{Przykład}
+\subsection{Balińskiego}
+\subsubsection{Algorytm}
+\subsubsection{Przykład}
+\subsection{Stilla}
+\subsubsection{Algorytm}
+\subsubsection{Przykład z regułą Adamsa}
 \newpage
 \subsection{Tijdeman}
 \subsubsection{Sformułowanie problemu}
