--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -237,7 +237,74 @@ Wniosek
 \end{equation}
 \subsection{Steinera-Yeomansa}
 \subsubsection{Algorytm}
+\begin{equation}
+E(i,j)=\lceil \frac{1}{r_i} * (j-T)\rceil
+\end{equation}
+\begin{equation}
+L(i,j)=\lfloor \frac{1}{r_i} * (T-j-1)+1\rfloor
+\end{equation}
+\begin{equation}
+r_i = \frac{d_i}{D}
+\end{equation}
 \subsubsection{Przykład}
+T=0,75
+\begin{center}
+    \begin{tabular}{ | l  |l |l|l|}
+    \hline
+		   &   &  &$r_i$ \\ \hline
+    $d_1$  & 10&2& $\frac{1}{20}$\\ \hline
+    $d_2$  & 15&3& $\frac{3}{20}$\\ \hline
+    $d_3$  & 25&5& $\frac{1}{4}$\\ \hline
+    $d_4$  & 50&10& $\frac{1}{2}$\\ \hline
+ 
+    
+    \end{tabular}
+\end{center}
+
+
+$E_{(1,1)} = \lceil \frac{1}{\frac{1}{10}}(1-0,75)\rceil = 3$
+
+$L_{(1,1)} = \lceil \frac{1}{\frac{1}{10}}(0,75+1-1)+1\rceil = 8$
+
+$E_{(2,1)} = \lceil \frac{1}{\frac{3}{20}}(1-0,75)\rceil = 2$
+
+$L_{(2,1)} = \lceil \frac{1}{\frac{3}{20}}(0,75+1-1)+1\rceil = 6$
+
+$E_{(3,1)} = \lceil \frac{1}{\frac{1}{4}}(1-0,75)\rceil = 1$
+
+$L_{(3,1)} = \lceil \frac{1}{\frac{1}{4}}(0,75+1-1)+1\rceil = 4$
+
+.
+
+.
+
+.
+
+ Z rozwiązań budujemy tabelkę
+
+\begin{center}
+    \begin{tabular}{ |l|l|l|l|l|l|l|l|l|l|l|}
+    \hline
+		  j &1E&1L&2E&2L&3E&3L&4E&4L&5E&5L\\ \hline
+		  i=1&3&8&13&18&x&x&x&x&x&x\\ \hline
+		  i=2&2&6&9&12&15&19&x&x&x&x\\ \hline
+		  i=3&1&4&5&8&9&12&13&16&17&20\\ \hline		
+  		  i=4&1&4&3&4&5&6&7&8&9&10\\ \hline  
+    \end{tabular}
+\end{center}
+
+Rozwiązanie
+\begin{center}
+    \begin{tabular}{ |l|l|l|l|l|}
+    \hline
+		1&2&3&4&5\\ \hline
+		(4,1)&(3,1)&(4,2)&(2,1)&(4,3)\\ \hline
+    \end{tabular}
+\end{center}
+Rozwiązanie odczytujemy szukając w całej tabeli najmniejszej wartości przy E. Gdy wartości przy E są równe patrzymy na odpowiadającą wartość L- bierzemy z mniejszą liczbą w L
+
+Gdy znajdziemy uszeregowanie dla T=0,75 zmniejszamy T i sprawdzamy czy znajdziemy dla mniejszego T uszeregowanie.
+
 \subsection{Inmana-Bulfina}
 \subsubsection{Algorytm}
 \subsubsection{Przykład}
