Steinera-Yeonasa - poprawka

--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -237,6 +237,7 @@ Wniosek
 \end{equation}
 \subsection{Steinera-Yeomansa}
 \subsubsection{Algorytm}
+Wzory
 \begin{equation}
 E(i,j)=\lceil \frac{1}{r_i} * (j-T)\rceil
 \end{equation}
@@ -264,15 +265,15 @@ T=0,75
 
 $E_{(1,1)} = \lceil \frac{1}{\frac{1}{10}}(1-0,75)\rceil = 3$
 
-$L_{(1,1)} = \lceil \frac{1}{\frac{1}{10}}(0,75+1-1)+1\rceil = 8$
+$L_{(1,1)} = \lfloor \frac{1}{\frac{1}{10}}(0,75+1-1)+1\rfloor = 8$
 
 $E_{(2,1)} = \lceil \frac{1}{\frac{3}{20}}(1-0,75)\rceil = 2$
 
-$L_{(2,1)} = \lceil \frac{1}{\frac{3}{20}}(0,75+1-1)+1\rceil = 6$
+$L_{(2,1)} = \lfloor \frac{1}{\frac{3}{20}}(0,75+1-1)+1\rfloor = 6$
 
 $E_{(3,1)} = \lceil \frac{1}{\frac{1}{4}}(1-0,75)\rceil = 1$
 
-$L_{(3,1)} = \lceil \frac{1}{\frac{1}{4}}(0,75+1-1)+1\rceil = 4$
+$L_{(3,1)} = \lfloor \frac{1}{\frac{1}{4}}(0,75+1-1)+1\rfloor = 4$
 
 .
 
