--- a/MOwZ.tex
+++ b/MOwZ.tex
@@ -484,7 +484,7 @@ Szereguję zadanie (k+1)
 \begin{itemize}
 	\item szereguję z lewej strony
 	
-	$h_{k+1}^{L}=[\max(s+p_{k+1}-d,0)\beta + \alpha\max(d-s-p_{k-1},0)]+h_{k}^{*}(s+p_{k+1})$
+	$h_{k+1}^{L}=[\beta\max(s+p_{k+1}-d,0) + \alpha\max(d-s-p_{k+1},0)]+h_{k}^{*}(s+p_{k+1})$
 	\item szereguję z prawej strony
 	
 	$h_{k+1}^{p}=\beta\left | (s+\sum\limits_{i}^{k}p_{i}-d) \right | +h_{k}^{*}(s)$, dla spełnionego warunku $(s+\sum\limits_{i=1}^{|n|}p_{i}\geq d)$
@@ -615,7 +615,7 @@ Zminimalizować $\sum\limits_{i=1}^{n}(Ci-d)^2$
 \item V-shape
 \item Algorytm Kaneta nie daje poprawnego rozwiazania problemu
 \item problem NP-trudny
-\item Zminimalizować $\sum\limits_{i=1}^{n}(C_{i}-d)^k k>0$
+\item Zminimalizować $\sum\limits_{i=1}^{n}(C_{i}-d)^k\ \ \  k>0$
 \begin{itemize}
 \item 0$<$k$\leq$ 1 problem wielomianowy, algorytm Kaneta
 \item k$\geq$ 2 problem NP-trudny
